mdapi/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <label>Fattura</label>
    <nameField>
        <displayFormat>Fattura-{00000000}</displayFormat>
        <label>Codice</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fatture</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>