mdapi/objects/Invoice__c/fields/Fattura_Shadow__c.field-meta.xml
<CustomField>
    <fullName>Fattura_Shadow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fattura Shadow</label>
    <referenceTo>Fattura_Shadow__c</referenceTo>
    <relationshipLabel>Fatture</relationshipLabel>
    <relationshipName>Fatture</relationshipName>
    <type>Lookup</type>
</CustomField>