mdapi/objects/Invoice__c/fields/Nome_Budget__c.field-meta.xml
<CustomField>
    <fullName>Nome_Budget__c</fullName>
    <formula>Budget__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget</label>
    <type>Text</type>
</CustomField>