mdapi/objects/Invoice__c/fields/Nome_Campagna__c.field-meta.xml
<CustomField>
    <fullName>Nome_Campagna__c</fullName>
    <formula>Campaign__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campagna</label>
    <type>Text</type>
</CustomField>