mdapi/objects/Invoice__c/fields/Non_Profit_Signaling__c.field-meta.xml
<CustomField>
    <fullName>Non_Profit_Signaling__c</fullName>
    <label>Non Profit Signaling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>