mdapi/objects/Invoice__c/fields/NoProfit_Category__c.field-meta.xml
<CustomField>
    <fullName>NoProfit_Category__c</fullName>
    <label>NoProfit Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>