mdapi/objects/Invoice__c/fields/Overview_Budget_Anno__c.field-meta.xml
<CustomField>
    <fullName>Overview_Budget_Anno__c</fullName>
    <formula>Overview_Budget_per_Anno__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Anno</label>
    <type>Text</type>
</CustomField>