mdapi/objects/Invoice__c/fields/Prestazione_Gratuita__c.field-meta.xml
<CustomField>
    <fullName>Prestazione_Gratuita__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prestazione Gratuita</label>
    <type>Checkbox</type>
</CustomField>