mdapi/objects/Invoice__c/fields/Programma__c.field-meta.xml
<CustomField>
    <fullName>Programma__c</fullName>
    <formula>Overview_Budget_per_Anno__r.Programma__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Programma</label>
    <type>Text</type>
</CustomField>