mdapi/objects/Invoice__c/fields/Structure__c.field-meta.xml
<CustomField>
    <fullName>Structure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Struttura</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>L&apos;Account selezionato non è di tipo Struttura</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Structure</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fatture</relationshipLabel>
    <relationshipName>Fatture</relationshipName>
    <type>Lookup</type>
</CustomField>