mdapi/objects/Invoice__c/fields/Total_Duration_in_minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Duration_in_minutes__c</fullName>
    <label>Total Duration (in minutes)</label>
    <summarizedField>Visit__c.Duration_in_minutes__c</summarizedField>
    <summaryForeignKey>Visit__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>