mdapi/objects/Invoice__c/fields/Totale_Biglietti__c.field-meta.xml
<CustomField>
    <fullName>Totale_Biglietti__c</fullName>
    <label>Totale Biglietti</label>
    <summarizedField>Ticket__c.Uses__c</summarizedField>
    <summaryForeignKey>Ticket__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>