mdapi/objects/Invoice__c/fields/Totale_Fattura__c.field-meta.xml
<CustomField>
    <fullName>Totale_Fattura__c</fullName>
    <formula>IF( Budget__r.Program__r.Name = &quot;Tempo Sospeso&quot;,  Totale_Ammontare_Visite__c , IF(Budget__r.Program__r.Name = &quot;Sorriso Sospeso&quot;,  Totale_Ammontare_Biglietti__c , 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale Fattura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>