mdapi/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Date__c</columns>
    <columns>Medical_Center__c</columns>
    <columns>Account__c</columns>
    <columns>Reporting_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>