mdapi/objects/Invoice__c/listViews/Vista_per_Ente_segnalante.listView-meta.xml
<ListView>
    <fullName>Vista_per_Ente_segnalante</fullName>
    <columns>NAME</columns>
    <columns>Medical_Center__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Non_Profit_Signaling__c</field>
        <operation>equals</operation>
        <value>Pippo</value>
    </filters>
    <label>Vista per Ente segnalante</label>
</ListView>